syntax = "proto3";
option go_package = "github.com/rancher/opni/plugins/metrics/pkg/apis/cortexops";

import "google/protobuf/empty.proto";
import "github.com/rancher/opni/pkg/apis/storage/v1/storage.proto";
import "google/api/annotations.proto";

package cortexops;

// The CortexOps service controls meta-operations for deploying and configuring
// Cortex in the upstream environment.
service CortexOps {
  rpc ConfigureCluster(ClusterConfiguration) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/configure"
      body: "*"
    };
  }
  rpc GetClusterStatus(google.protobuf.Empty) returns (InstallStatus) {
    option (google.api.http) = {
      get: "/status"
    };
  }
  rpc UninstallCluster(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/uninstall"
    };
  }
}

enum InstallState {
  Unknown = 0;
  NotInstalled = 1;
  Updating = 2;
  Installed = 3;
  Uninstalling = 4;
}

message InstallStatus {
  InstallState state = 1;
  string version = 2;
  map<string, string> metadata = 3;
}

enum DeploymentMode {
  AllInOne = 0;
  HighlyAvailable = 1;
}

message ClusterConfiguration {
  DeploymentMode mode = 1;
  storage.StorageSpec storage = 2;
}
